--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ng-zorro-antd": "^14.1.1",
     "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
+    "simple-parallax-js": "^5.6.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
