--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "jwt-decode": "^3.1.2",
+    "ng-image-slider": "^6.1.0",
     "ng-zorro-antd": "^14.1.1",
     "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
